[package]
name = "pv"
version = "0.1.0"
edition = "2024"
description = "View the markdown file in `~/.claude/plans/` with the given command. By default, it opens the most recent file."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
skim = { version = "3.2", default-features = false }
jiff = "0.2"
dirs = "6.0"
